# intent-verify

./: ANNOUNCEMENT.md  README.md  pyproject.toml
examples/: intent.yaml  prompts.md
intentverify/: __init__.py  __main__.py  checks.py  cli.py  runner.py  spec.py
tests/: test_checks.py  test_runner.py
