[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-verify"
version = "0.1.0"
description = "Declare desired state as intent; verify it with observable checks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
intentverify = "intentverify.cli:main"

[tool.setuptools]
packages = ["intentverify"]
